cmake_minimum_required(VERSION 3.0)

 #FOREACH（subdir $ {SUBDIRS}）
 #ADD_SUBDIRECTORY（$ {subdir}）
 #ENDFOREACH subdir  

add_subdirectory(2_Color)
add_subdirectory(Triangle)
add_subdirectory(3DCameraDemo)
add_subdirectory(3DCoordSystem)
add_subdirectory(AssimpDemo)
add_subdirectory(ColorsTriangle)
add_subdirectory(Light)
add_subdirectory(Lighter)
add_subdirectory(LightMatirial)
add_subdirectory(Matcrial)
add_subdirectory(MultipleLight)
add_subdirectory(RGBTriangle)
add_subdirectory(Textture)


